Fix overlapping text boxes in childhood section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ main {
     text-align:justify;
     width: 300px;
     height: 300px;
-    padding: 1em;
+    padding: 1rem;
     bottom: 20%;
 }
 
@@ -132,16 +132,16 @@ main {
 /* #early-childhood {
     box-sizing: border-box;
 } */
-/*
+
 #childhood-container {
     position: relative;
-    margin: auto;
+    /* margin: auto; */
     height: 100vh;
     width: 100vw;
     display: flex; 
-    flex-wrap: wrap; */
-
-/* }
+    flex-wrap: wrap;
+}
+/* 
 #childhood-container > video {
     width: 100%;
     height: 100%;
@@ -149,34 +149,32 @@ main {
     position: relative;
     z-index: -1;
   }
-
+*/
+#childhood-container h2 {
+    margin-top: 2rem;
+}
   #childhood-text-1 {
-    position: absolute;
-    background-color: rgba(f, f, f, .6);
-    height: 0; */
-    /* text-align:justify;
-    width: 300px;
-    height: 300px;
-    padding: 1em;
-    border: 1px solid #424040;
-    top: 10%;
-    bottom: 10%;
-    right: 10%;
-  }
-  
-  #childhood-text-2 {
-    position: absolute;
+    position: relative;
     background-color: rgba(f, f, f, .6);
     text-align:justify;
     width: 300px;
     height: 300px;
-    padding: 1em;
+    padding: 1rem;
     border: 1px solid #424040;
-    top: 10%;
-    bottom: 10%;
-    right: 10%; 
+    order: 1;
+  } 
+  
+  #childhood-text-2 {
+    position: relative;
+    background-color: rgba(f, f, f, .6);
+    text-align:justify;
+    width: 300px;
+    height: 300px;
+    padding: 1rem;
+    border: 1px solid #424040;
+    order: 2;
     
-}*/
+}
 
 
 
@@ -202,7 +200,7 @@ footer {
 }
 
 #socials>li {
-    margin-bottom: 0.7em;
+    margin-bottom: 0.7rem;
     padding-right: 1rem;
 
 }
@@ -221,7 +219,7 @@ footer {
     #intro-text {
         width: 370px;
         height: 300px;
-        padding: 2em 3em 3em 2em;
+        padding: 2rem 3rem 3rem 2rem;
         bottom: 30%;
     }
     
@@ -243,7 +241,7 @@ footer {
         
         width: 420px;
         height: 300px;
-        padding: 3em 4em 4em 2em;
+        padding: 3rem 4rem 4rem 2rem;
     }
     
 }
